Fixed menu overflow bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -419,7 +419,7 @@ label a {
     font-size: .8em;
     /* width: 100%; */
     width: 250px;
-    /* box-shadow:0px 1px 3px rgba(0,0,0,.2); */
+    /* box-shadow: 0px 1px 3px rgba(0, 0, 0, .2); */
 }
 
 .menu {
@@ -443,10 +443,14 @@ label a {
     
     /***** Top Level ******************/
     .menu > ul > li {
+        overflow: hidden;
         float: left;
         display: inline-block;
         position: relative;
         font-size: .85em;
+    }
+    .menu > ul > li:hover {
+        overflow: visible;
     }
     .menu > ul > li > a {
         padding-top: 3px;
@@ -454,12 +458,12 @@ label a {
         padding-right: 18px;
         display: inline-block;
         text-decoration: none;
-        /* text-shadow:0px 1px 0px rgba(0,0,0,.4); */
+        /* text-shadow: 0px 1px 0px rgba(0, 0, 0, .4); */
     }
     /* Top Level Hover Styles */
      .menu > ul > li:hover > a, .menu > ul > .current-item > a {
-        /* color:#0040FF; */
-        /* background:#ffffff; */
+        /* color: #0040FF; */
+        /* background: #ffffff; */
         /* text-decoration-line: underline; */
     }     
     /***** Bottom Level ***************/
@@ -480,8 +484,8 @@ label a {
     padding-bottom: 3px;
     padding-left: 5px;
     position: absolute;
-    /* top:100%; */
-    /* left:0px; */
+    /* top: 100%; */
+    /* left: 0px; */
     z-index: -1;
     opacity: 0;
     transition: opacity linear .15s;
@@ -496,8 +500,8 @@ label a {
             padding-bottom: 3px;
             padding-left:3px;
             padding-right:3px;
-            /* margin-left:5px; */
-            /* margin-right:5px; */
+            /* margin-left: 5px; */
+            /* margin-right: 5px; */
             display: block;
             text-decoration: none;
             background-color: #FFFFFF;
